[scss] Fix submit button clipping out container

--- a/scss/grid.scss
+++ b/scss/grid.scss
@@ -2,8 +2,6 @@
   display: grid;
   grid-template-columns: repeat(3, minmax(0, 1fr));
   gap: 1rem;
-  margin-left: 5rem;
-  margin-right: 5rem;
 }
 .griditem {
   display: flex;
